<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.github.codingchili.dice30.MainActivity"
    android:id="@+id/area"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:layout_width="312dp"
        android:layout_height="200dp"
        android:id="@+id/dice_area"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/dice_1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/dice_2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/dice_3"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/dice_4"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/dice_5"
            android:layout_alignBottom="@+id/dice_4"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/dice_6"
            android:layout_alignBottom="@+id/dice_5"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:id="@+id/button_area"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/score_dice"
            android:visibility="gone"
            android:id="@+id/dice_score"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/throw_dice"
            android:id="@+id/dice_roll"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:elevation="96dp"
            android:stateListAnimator="@null"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/scoreboard_area">

        <TextView
            android:text="@string/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_name"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:enabled="true" />

        <TextView
            android:text="@string/player_turn"
            android:id="@+id/player_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignBottom="@+id/player_score"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/player_score"
            android:id="@+id/player_score"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/roll_score"
        android:layout_below="@+id/dice_area"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
