<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/winner_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/button_area"
            android:layout_width="fill_parent"
            android:layout_height="66dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp">

            <Button
                android:id="@+id/button_quit"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="18dp"
                android:text="@string/quit" />

            <Button
                android:id="@+id/button_newgame"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="18dp"
                android:textColor="@color/white"
                android:text="@string/newgame" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/scoring_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="48dp"
                    android:text="@string/winner"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/winner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:text="winner_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/winner_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_below="@+id/winner_name"
                    android:layout_centerHorizontal="true"
                    android:text="winner_score"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/winner_turn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_below="@+id/winner_score"
                    android:layout_centerHorizontal="true"
                    android:text="winner_turns"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/list_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <ListView
                    android:id="@+id/scoring_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="82dp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>